// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBar 1`] = `
<div
  className="flex-row"
  style={
    Object {
      "borderBottom": "2px solid #666",
      "borderTop": "2px solid #111",
      "overflow": "hidden",
      "padding": "2px",
    }
  }
>
  <div
    className="flex-elem-fix"
    onClick={[Function]}
  >
    <div
      className="color-gray  "
    >
      zero
    </div>
  </div>
  <div
    className="flex-elem-fix"
    onClick={[Function]}
  >
    <div
      className="color-success "
    >
      one
    </div>
  </div>
</div>
`;

exports[`StatusBar 2`] = `
<div
  className="flex-row"
  style={
    Object {
      "borderBottom": "2px solid #666",
      "borderTop": "2px solid #111",
      "overflow": "hidden",
      "padding": "2px",
    }
  }
>
  <div
    className="flex-elem-fix"
    onClick={[Function]}
  >
    <div
      className="color-gray "
    >
      zero
    </div>
  </div>
  <div
    className="flex-elem-fix"
    onClick={[Function]}
  >
    <div
      className="color-success  "
    >
      one
    </div>
  </div>
</div>
`;
